Apply Regular GSUB to NotoNastaliqUrdu-Bold.

--- a/src/NotoNastaliqUrdu/NotoNastaliqUrdu.plist
+++ b/src/NotoNastaliqUrdu/NotoNastaliqUrdu.plist
@@ -17,7 +17,7 @@
 		<string>Noto Nastaliq Urdu GDEF.txt</string>		<key>GPOS</key>
 		<string>Noto Nastaliq Urdu Bold GPOS.txt</string>
 	<key>GSUB</key>
-		<string>Noto Nastaliq Urdu Bold GSUB.txt</string>	</dict>
+		<string>Noto Nastaliq Urdu Regular GSUB.txt</string>	</dict>
 
 </dict>
 </plist>
